# Autonomous-Person-Following-Robot-with-Obstacle-Avoidance-Using-ROS-2

./: .gitignore  AGY CHAT HISTORY  README.md  reference report.txt
CASE STUDY/CASE STUDY MAIN/CODE/: package.xml  setup.cfg  setup.py  supermarket_dashboard.py
CASE STUDY/CASE STUDY MAIN/CODE/launch/: nav2_launch.py  real_robot.launch.py  real_robot_nav2.launch.py  supermarket_navigation.launch.py  supermarket_world.launch.py  turtlebot3_house.launch.py
CASE STUDY/CASE STUDY MAIN/CODE/maps/: auto_generated_map.pgm  (+7 more)
CASE STUDY/CASE STUDY MAIN/CODE/person re id/person_reid_perception/: package.xml  setup.cfg  setup.py
CASE STUDY/CASE STUDY MAIN/CODE/person re id/person_reid_perception/config/: perception.yaml
CASE STUDY/CASE STUDY MAIN/CODE/person re id/person_reid_perception/launch/: perception.launch.py  sim_smoke_test.launch.py
CASE STUDY/CASE STUDY MAIN/CODE/person re id/person_reid_perception/person_reid_perception/: __init__.py  dummy_camera_publisher.py  image_preprocessor.py  perception_node.py  scan_distance.py  track_target_publisher.py
CASE STUDY/CASE STUDY MAIN/PRESENTATION/: extracted_presentation_raw.txt  presentation_transcript.txt  project_presentation_guide.md
CASE STUDY/CASE STUDY MAIN/REFERENCES/: Autonomous Vision Robot Final Report.docx  IEEE REPORT CONTENTS.txt  project_documentation.md
CASE STUDY/CASE STUDY MAIN/REPORT/: AGY BEST Autonomous_Person_Following_Robot_Complete_IEEE_Paper.md  ieee_report.md  ieee_report_structure.md
CASE STUDY/CASE STUDY MAIN/WORK/: bypass_follower_node.py  extract_images.py  generate_report_docs.py
(+32 files in other folders)
